--- a/auth-sample/src/main/AndroidManifest.xml
+++ b/auth-sample/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
     specific language governing permissions and limitations
     under the License.
 -->
-<manifest package="com.spotify.sdk.android.authentication.sample"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
